Completed the backend might need some modification but can be done later so it's fine

--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
+    "web-push": "^3.6.7"
+  }
 }
